# ChangeLog for sci-geosciences/tilecache
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/tilecache/ChangeLog,v 1.4 2010/04/27 12:31:40 scarabeus Exp $

  27 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  tilecache-2.10.ebuild:
  Add missing dependency per bug #313921.

  27 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  tilecache-2.10.ebuild, metadata.xml:
  Drop myself as maintainer since i am in the herd so i would get
  doublemails. Update to new python.

  06 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  tilecache-2.10.ebuild:
  Add missing dependency.

*tilecache-2.10 (09 Dec 2009)

  09 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +tilecache-2.10.ebuild, +metadata.xml:
  Initial commit.
