@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST tilecache-2.10.tar.gz 63189 RMD160 fb46ea5d3927cd73b02df9a7ae40406ad62a4a38 SHA1 ec700dcffe595300601cd93adcef219ec97a5369 SHA256 d377dc6eed77071422c5e39b18fdaa723bc2b93d555ee95cda1b04b3e0d1278f
-EBUILD tilecache-2.10.ebuild 640 RMD160 32eca182092ad64ca09209dbe7a1e016981da48f SHA1 4ea9df7b29b07fa57bc99496080e7ad7d9a26fd3 SHA256 5a903b7af85bc60b69d588ada1df3a367e543ed112c100cfd995f2709b87f146
-MISC ChangeLog 800 RMD160 1dd0da8543a8f2a4a77ca1969e3966b04e511eff SHA1 b674d584a9aff2210ec90ad61d31301936a66fd0 SHA256 2eed951d5153dbe824e36ce881945bcf7782eed298af6aba2a0b678eb317f1f0
+DIST tilecache-2.11.tar.gz 68705 RMD160 723452a6f7682e7f3e8b30db4a76bfda77d62a8c SHA1 7fb9f8230b6c51123646a031f45b9bb27f3a944d SHA256 b46dc2731a19b40e3207cf3c9b43ea59b899a622a586aaa3c397c3b5aa00f887
+EBUILD tilecache-2.11.ebuild 638 RMD160 1a1453890db1e0d73e70b6b11b3cdd8b1d9ec924 SHA1 234a79e312f72b058f8955e8dea17c1d22157420 SHA256 155c490a0c392716d77a914a025a87259a0a834f65a4780d3a8aa9cd3f186bca
+MISC ChangeLog 975 RMD160 4f805729ac3de0474e6f24ecf1a8d0202b16abac SHA1 b898c4a7549a19072b353bc94e1afcc28bb58c02 SHA256 5c82f6c1e932e5b3da29f007cdf7c22218b6da2159eeea32332e13971e79f25a
 MISC metadata.xml 168 RMD160 156c29f9b364fbbaf0028d17736a01112e5d8cab SHA1 1221e73982792f6e23f10d95e878e86e8f62fe35 SHA256 2fc15316b226307080574c36b3761f27a23a642e89c60f02feabdc64049a188d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAkvW2RkACgkQHB6c3gNBRYcVAACfUlLpAoJpd5S4JPuJS8ypUbI9
-gVIAoKS/OZ+z/N16oMK/KTTHThUIyqxq
-=qAbM
+iEYEARECAAYFAk3mDBoACgkQHB6c3gNBRYdDQACeJBR92PESVVgMqlmc+1xVPNvb
+UbYAoL6s4jgxXsCkfEC6ZFLS1XQYALIH
+=mFgW
 -----END PGP SIGNATURE-----
