@@ -1,6 +1,12 @@
 # ChangeLog for sci-geosciences/tilecache
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/tilecache/ChangeLog,v 1.4 2010/04/27 12:31:40 scarabeus Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/tilecache/ChangeLog,v 1.5 2011/06/01 09:53:25 scarabeus Exp $
+
+*tilecache-2.11 (01 Jun 2011)
+
+  01 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org> -tilecache-2.10.ebuild,
+  +tilecache-2.11.ebuild:
+  Version bump to latest. Drop older.
 
   27 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org>
   tilecache-2.10.ebuild:
